--- a/adrianCaballeroTorrebejano/src/main/resources/application.properties
+++ b/adrianCaballeroTorrebejano/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=adrianCaballeroTorrebejano
+
+spring.datasource.url=jdbc:h2:file:./db/basededatos;DB_CLOSE_ON_EXIT=FALSE
+
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
+
+spring.jpa.show-sql=true
+
